--- a/main.css
+++ b/main.css
@@ -391,6 +391,7 @@ body {
   letter-spacing: 0.2rem;
   font-size: var(--font-size-2);
   padding: 1rem;
+  margin-bottom: 0.5rem;
 }
 /**Stylowanie wrappera*/
 
@@ -436,10 +437,10 @@ body {
 /**Stylowanie paragrafu*/
 
 .newsletter__wrapper > p {
-  padding-top: 1rem;
+  padding-top: 0.5rem;
   font-family: var(--primary-font);
   font-size: var(--font-size-2);
-  line-height: 1.8rem;
+  line-height: 1.6rem;
   width: 90%;
   margin: 0 auto;
 }
@@ -485,7 +486,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: top;
-  text-align: center;
+  text-align: left;
   margin: 0.2rem;
   cursor: pointer;
   padding: 0.2rem;
@@ -504,10 +505,10 @@ body {
   border-radius: 0.2rem;
   width: 1rem;
   height: 1rem;
-  padding-bottom: 0.2rem;
-  padding-left: 0.1rem;
-  margin-right: 0.2rem;
-  margin-left: 1rem;
+  padding-bottom: 0.1rem;
+  padding-left: 0.2rem;
+  margin-right: 0.5rem;
+  /* margin-left: 1rem; */
   vertical-align: center;
   color: transparent;
   transform: translateY(0.5rem);
