--- a/main.css
+++ b/main.css
@@ -58,7 +58,7 @@ body {
 
 .nav__icon:before {
   background: var(--third-color);
-  content: "";
+  content: '';
   display: block;
   height: 100%;
   width: 100%;
@@ -70,7 +70,7 @@ body {
 
 .nav__icon:after {
   background: var(--third-color);
-  content: "";
+  content: '';
   display: block;
   height: 100%;
   width: 100%;
@@ -201,10 +201,6 @@ body {
 }
 
 /* Sekcja dodatkowe informacje */
-
-.moreInfo {
-  margin: 32px 0;
-}
 
 .moreInfo__wrapper {
   display: flex;
@@ -445,7 +441,7 @@ body {
 }
 
 /**Stylowanie przycisku*/
-.newsletter input[type="submit"] {
+.newsletter input[type='submit'] {
   padding: 0;
 }
 
@@ -477,7 +473,7 @@ body {
   width: 90%;
   padding: 0.5rem;
 }
-.newsletter input[type="checkbox"] + label {
+.newsletter input[type='checkbox'] + label {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -491,14 +487,14 @@ body {
   font-size: 1rem;
 }
 
-.newsletter input[type="checkbox"] {
+.newsletter input[type='checkbox'] {
   display: none;
 }
 
-.newsletter input[type="checkbox"] + label:before {
+.newsletter input[type='checkbox'] + label:before {
   display: flex;
   background-color: #fff;
-  content: "\2714";
+  content: '\2714';
   border: 0.1rem solid var(--fifth-color);
   border-radius: 0.2rem;
   width: 1rem;
@@ -512,11 +508,11 @@ body {
   transition: 0.3s;
 }
 
-.newsletter input[type="checkbox"] + label:active:before {
+.newsletter input[type='checkbox'] + label:active:before {
   transform: scale(0);
 }
 
-.newsletter input[type="checkbox"]:checked + label:before {
+.newsletter input[type='checkbox']:checked + label:before {
   background-color: var(--fourth-color);
   color: var(--primary-color);
   border-color: var(--fifth-color);
