--- a/tablet.css
+++ b/tablet.css
@@ -82,21 +82,24 @@
     color: var(--sixth-color);
   }
 
+  .moreInfo__title {
+    width: 90%;
+  }
   .moreInfo__wrapper {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     overflow: hidden;
-    width: 100%;
+    width: 90%;
   }
   .moreInfoBox {
     display: flex;
     align-items: center;
-
     padding: 1rem 2rem;
     width: 50%;
     height: auto;
   }
+
   .moreIcon--1,
   .moreIcon--4,
   .moreIcon--5,
