--- a/screen.css
+++ b/screen.css
@@ -20,7 +20,12 @@
     background-color: var(--fifth-color);
     color: var(--sixth-color);
   }
-
+  .moreInfo__wrapper {
+    width: 80%;
+  }
+  .moreInfo__title {
+    width: 90%;
+  }
   .moreInfoBox {
     padding: 1rem 4rem;
   }
