ZE-AboutUs-6- Zmiana kolorystki ikon socjali w wersji tablet

--- a/tablet.css
+++ b/tablet.css
@@ -109,6 +109,15 @@
   .moreIcon--7 {
     color: var(--fourth-color);
   }
+
+  .social--1, .social--4 {
+    color: var(--primary-color);
+  }
+  
+  .social--2, .social--3 {
+    color: var(--sixth-color);
+  }
+
   .newsletter__title {
     width: 80%;
   }
