--- a/screen.css
+++ b/screen.css
@@ -31,13 +31,13 @@
 
   .content--1,
   .content--3 {
-    background-color: #acc48b;
+    background-color: var(--fourth-color);
     color: var(--primary-color);
   }
 
   .content--2,
   .content--4 {
-    background-color: #4e6149;
+    background-color: var(--fifth-color);
     color: var(--sixth-color);
   }
 
