zmiana koloru czcionki w content--1 i content--3 w AboutUs

--- a/main.css
+++ b/main.css
@@ -282,6 +282,11 @@ body {
   padding: 2rem 1rem ;
 }
 
+.content--1,
+.content--3 {
+  color: var(--primary-color);
+}
+
 .content--2,
 .content--4 {
   background-color: var(--fifth-color);
