--- a/main.css
+++ b/main.css
@@ -326,15 +326,19 @@ body {
 /* Stylowanie sekcji name */
 
 .aboutUs__name {
-  font-size: 24px;
-  padding-top: 0.5rem;
+  font-size: var(--font-size-2);
+  font-family: var(--primary-font);
+  font-weight: bold;
+  letter-spacing: 0.2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 /* Stylowanie paragrafu */
 
 .aboutUs p {
-  font-size: 16px;
-  font-family: var(--primary-font);
+  font-size: var(--font-size-2);
+  font-family: var(--secondary-font);
 }
 
 /* Stylowanie sekcji aboutUs__social */
