--- a/main.css
+++ b/main.css
@@ -119,8 +119,31 @@ body {
   background-attachment: fixed;
 }
 
-.logo {
+.hero{
+  display: flex;
+  flex-direction: column;
+}
+
+.hero__logo {
+  margin: auto;
+}
+img{
   height: 5rem;
+  margin-top: 3rem;
+}
+.hero__intro{
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.7);
+  
+}
+.hero__intro h2{
+  font-family: var(--primary-font);
+  line-height: 1.5rem;
+  color: var(--primary-color);
+  text-align: justify;
+  font-size: 1rem;
 }
 
 /*przycisk Zapisu na premiere*/
@@ -139,7 +162,7 @@ body {
   height: 3rem;
   width: 10rem;
   border-radius: 8px;
-  border: solid transparent;
+  border: solid white 1px;
 
   font-family: var(--secondary-font);
   font-size: 1.2rem;
