--- a/main.css
+++ b/main.css
@@ -162,7 +162,7 @@ body {
   height: 3rem;
   width: 10rem;
   border-radius: 8px;
-  border: solid white 1px;
+  border: solid var(--fourth-color) 1px;
 
   font-family: var(--secondary-font);
   font-size: 1.2rem;
