--- a/screen.css
+++ b/screen.css
@@ -6,6 +6,14 @@
   .menu__item {
     padding: 16px;
   }
+
+  .hero__intro{
+    width: 60vh;
+    padding: 2rem;
+    border-radius: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+
   .info__item {
     width: 25%;
   }
