--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -113,13 +113,13 @@ body {
   align-items: center;
   justify-content: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),
-    url(Identyfikacja/background_mobile.jpeg);
+    url(../Identyfikacja/background_mobile.jpeg);
 
   background-size: cover;
   background-attachment: fixed;
 }
 
-.hero{
+.hero {
   display: flex;
   flex-direction: column;
 }
@@ -127,25 +127,24 @@ body {
 .hero__logo {
   margin: auto;
 }
-.logo{
+.logo {
   height: 5rem;
   margin-top: 3rem;
 }
-.hero__intro{
+.hero__intro {
   margin: 1rem;
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: rgba(255, 255, 255, 0.7);
-  
 }
-.hero__intro h1{
+.hero__intro h1 {
   font-family: var(--primary-font);
   line-height: 1.5rem;
   color: var(--primary-color);
   text-align: justify;
   font-size: 1rem;
 }
-.hero__intro h2{
+.hero__intro h2 {
   text-align: center;
   font-family: var(--primary-font);
   color: var(--primary-color);
@@ -235,7 +234,7 @@ body {
 
 /* Sekcja dodatkowe informacje */
 .moreInfo {
-  background-image: url(Identyfikacja/plant_pattern.jpg);
+  background-image: url(../Identyfikacja/plant_pattern.jpg);
 }
 .moreInfo__wrapper {
   display: flex;
@@ -288,7 +287,7 @@ body {
 .moreIcon--2,
 .moreIcon--4,
 .moreIcon--6,
-.moreIcon--8{
+.moreIcon--8 {
   color: var(--primary-color);
 }
 
@@ -315,7 +314,7 @@ body {
   align-items: center;
   height: auto;
   text-align: center;
-  padding: 2rem 1rem ;
+  padding: 2rem 1rem;
 }
 
 .content--1,
@@ -340,22 +339,22 @@ body {
 }
 
 .photo--1 {
-  background: url(nasze_zdjecia/KarinaMiernik.jpeg);
+  background: url(../nasze_zdjecia/KarinaMiernik.jpeg);
   background-size: contain;
 }
 
 .photo--2 {
-  background: url(nasze_zdjecia/PaulinaMalinowska.jpeg);
+  background: url(../nasze_zdjecia/PaulinaMalinowska.jpeg);
   background-size: contain;
 }
 
 .photo--3 {
-  background: url(nasze_zdjecia/MichalMarchewa.jpeg);
+  background: url(../nasze_zdjecia/MichalMarchewa.jpeg);
   background-size: contain;
 }
 
 .photo--4 {
-  background: url(nasze_zdjecia/MaciejLangowski.jpeg);
+  background: url(../nasze_zdjecia/MaciejLangowski.jpeg);
   background-size: contain;
 }
 
@@ -421,7 +420,7 @@ body {
   flex-direction: column;
   width: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),
-    url(Identyfikacja/background_mobile.jpeg);
+    url(../Identyfikacja/background_mobile.jpeg);
   background-position: center;
   background-size: cover;
   text-align: center;
