--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,7 @@ body {
 .info {
   display: flex;
   flex-direction: column;
-  /* width: 100%; */
+
   height: auto;
 }
 
@@ -228,8 +228,8 @@ body {
 .info__header {
   font-size: var(--font-size-2);
   font-family: var(--primary-font);
-  padding: 8px 0;
-  letter-spacing: 4px;
+  padding: 0.5rem 0;
+  letter-spacing: 0.25rem;
 }
 
 /* Sekcja dodatkowe informacje */
@@ -301,7 +301,7 @@ body {
 .aboutUs {
   display: flex;
   flex-direction: column;
-  width: 100%;
+
   background-color: var(--fourth-color);
 }
 
@@ -314,7 +314,7 @@ body {
   align-items: center;
   height: auto;
   text-align: center;
-  padding: 2rem 1rem;
+  padding: 1.5rem 1rem;
 }
 
 .content--1,
@@ -364,7 +364,7 @@ body {
   font-size: var(--font-size-2);
   font-family: var(--primary-font);
   font-weight: bold;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.25rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -379,7 +379,7 @@ body {
 /* Stylowanie sekcji aboutUs__social */
 
 .aboutUs__social {
-  padding-top: 8px;
+  padding-top: 0.25rem;
 }
 
 /* Stylowanie ikon social mediów */
@@ -388,8 +388,8 @@ body {
 .social--2,
 .social--3,
 .social--4 {
-  padding: 8px;
-  font-size: 32px;
+  padding: 0.5rem;
+  font-size: 2rem;
   display: inline-block;
   transition: transform 250ms;
 }
