--- a/css/tablet.css
+++ b/css/tablet.css
@@ -20,13 +20,14 @@
     border-bottom: none;
   }
 
-  .logo {
-    height: 7rem;
-    margin-bottom: 3rem;
+  .hero__intro {
+    margin: 4rem;
+    padding: 2rem;
   }
 
-  .hero__intro{
-    margin: 3rem;
+  .logo {
+    height: 9rem;
+    margin-bottom: 2rem;
   }
 
   .info__icon {
