--- a/css/screen.css
+++ b/css/screen.css
@@ -12,10 +12,10 @@
   }
 
   .hero__intro {
-    width: 80vh;
+    width: 70vw;
     padding: 2rem;
     border-radius: 0.5rem;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.6);
   }
 
   .hero__intro h1 {
