zmiana z height na min-height w hero_wrapper

--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ body {
 
 /*Ostylowanie tla sekcji hero*/
 .hero__wrapper {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
