--- a/css/main.css
+++ b/css/main.css
@@ -155,9 +155,8 @@ body {
 .hero__button {
   display: block;
   text-align: center;
-  margin-top: 1rem;
-  height: 3rem;
-  line-height: 2rem;
+  margin: 1rem;
+
 }
 
 .btn {
