--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,6 @@ body {
   display: block;
   text-align: center;
   margin: 1rem;
-
 }
 
 .btn {
@@ -462,6 +461,7 @@ body {
   padding: 1rem 0rem;
   min-width: 20%;
   width: 90%;
+  position: relative;
 }
 
 .newsletter input {
@@ -469,6 +469,26 @@ body {
   padding: 1rem 2.1rem;
   font-size: var(--font-size-2);
 }
+
+.newsletter__input small {
+  position: absolute;
+  visibility: hidden;
+  bottom: 0;
+  left: 1rem;
+  padding-top: 0.5rem;
+}
+
+.newsletter__input.error small {
+  visibility: visible;
+  color: #e74c3c;
+}
+.newsletter__input.success input {
+  border: solid 2px var(--fourth-color);
+}
+.newsletter__input.error input {
+  border: solid 2px #e74c3c;
+}
+
 /**Stylowanie ikon*/
 
 .newsletter__icon {
