--- a/css/main.css
+++ b/css/main.css
@@ -573,10 +573,10 @@ body {
   border-radius: 0.2rem;
   width: 1rem;
   height: 1rem;
-  padding-bottom: 0.1rem;
-  padding-left: 0.2rem;
+  padding-bottom: 0.3rem;
+  padding-left: 0.15rem;
   margin-right: 0.5rem;
-  vertical-align: center;
+  vertical-align: bottom;
   color: transparent;
   transform: translateY(0.5rem);
   transition: 0.3s;
