--- a/css/main.css
+++ b/css/main.css
@@ -107,48 +107,33 @@ body {
 }
 
 /*Ostylowanie tla sekcji hero*/
+
 .hero__wrapper {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex
+}
+
+.hero__background {
   min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
+  position: absolute;
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(../Identyfikacja/background_mobile.webp);
+    url(../Identyfikacja/tlo.jpg);
   background-size: cover;
-  background-attachment: fixed;
+  background-position: center;
+  z-index: -1;
 }
 
 .hero {
-  display: flex;
-  flex-direction: column;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
 }
 
-.hero__logo {
-  margin: auto;
-}
-.logo {
-  height: 5rem;
-  margin-top: 3rem;
-}
-.hero__intro {
-  margin: 1rem;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  background-color: rgba(255, 255, 255, 0.6);
-}
-.hero__intro h1 {
-  font-family: var(--primary-font);
-  line-height: 1.5rem;
-  color: var(--primary-color);
-  text-align: justify;
-  font-size: 1rem;
-}
-.hero__intro h2 {
-  text-align: center;
-  font-family: var(--primary-font);
-  color: var(--primary-color);
-  font-size: 1.2rem;
-}
 
 /*przycisk Zapisu na premiere*/
 
