--- a/css/main.css
+++ b/css/main.css
@@ -111,12 +111,12 @@ body {
 .hero__wrapper {
   position: relative;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex
 }
 
 .hero__background {
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
   position: absolute;
   background-image: linear-gradient(rgba(10, 10, 0, 0.5), rgba(0, 0, 0, 0)),
@@ -129,6 +129,7 @@ body {
 .hero {
     width: 100vw;
     margin-top: 6rem;
+    margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: start;
