--- a/css/tablet.css
+++ b/css/tablet.css
@@ -24,6 +24,38 @@
   .info__icon {
     font-size: 2.5rem;
   }
+/* ------- HERO --------*/
+
+.hero {
+  margin-top: 9rem;
+  margin-bottom: 3rem;
+}
+
+.hero__logo {
+  height: 7rem;
+}
+
+.hero__intro {
+  margin: 0 3rem;
+}
+
+.hero__prompt h1 {
+  font-size: 1.5rem;
+}
+
+.hero__button {
+  margin-top: 4rem;
+}
+
+.btn {
+  height: 3.5rem;
+  width: 10rem;
+  font-size: 1.5rem;
+}
+
+
+
+/* --------INFO --------*/
   .info {
     flex-direction: row;
     flex-wrap: wrap;
