--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,12 @@ body {
     
 }
 
+.hero__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .hero__intro {
   margin: 0 2rem;
 }
@@ -145,6 +151,7 @@ body {
   height: 3.5rem;
   display: flex;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .hero__prompt h1 {
