--- a/css/screen.css
+++ b/css/screen.css
@@ -7,11 +7,38 @@
     padding: 16px;
   }
 /* ----- SEKCJA HERO -------- */
-.hero__background {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+  .hero__background {
+   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(../Identyfikacja/tlo.jpg);
-}
+  }
 
+  .hero{
+  display: grid;
+  grid-template-columns: 65vw auto;
+  }
+
+  .hero__content {
+    padding: 1rem;
+  }
+
+  .hero__logo {
+    height: 10rem;
+    margin-bottom: 4rem;
+  }
+
+  .hero__prompt {
+    margin-bottom: 3rem;
+  }
+
+  .hero__prompt h1 {
+    font-size: 2rem;
+    font-weight: normal;
+  }
+
+  .h--icon {
+    width: 4.5rem;
+    font-size: 4rem;
+  }
 
 
 
