--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ body {
 .hero {
     width: 100vw;
     margin-top: 6rem;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -156,6 +156,7 @@ body {
 
 .hero__prompt h1 {
   font-size: 1rem;
+  font-weight: normal;
   font-family: var(--primary-font);
   text-transform: uppercase;
   color: white;
@@ -185,14 +186,14 @@ margin-right: .5rem;
 }
 
 .btn {
-  border-radius: 4px;
-  height: 2.5rem;
-  width: 8rem;
+  border-radius: 2px;
+  height: 3rem;
+  width: 10rem;
   border: solid var(--fourth-color) 1px;
 
   font-family: var(--primary-font);
   font-size: 1rem;
-  background-color: var(--primary-color);
+  background-color: rgba(20, 32, 9, 0.658);
   text-transform: uppercase;
   cursor: pointer;
   touch-action: manipulation;
@@ -200,7 +201,6 @@ margin-right: .5rem;
 
 .btn:hover {
   background-color: var(--fifth-color);
-  opacity: 0.9;
   transition: 0.2s;
 }
 
