ZE-Formularz-bug2 - tło w formularzu

--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ body {
 
 .nav__icon:before {
   background: var(--third-color);
-  content: "";
+  content: '';
   display: block;
   height: 100%;
   width: 100%;
@@ -76,7 +76,7 @@ body {
 
 .nav__icon:after {
   background: var(--third-color);
-  content: "";
+  content: '';
   display: block;
   height: 100%;
   width: 100%;
@@ -212,7 +212,7 @@ body {
 
 /****SEKCJA INFO ***/
 
-.container{
+.container {
   background-image: url(../Identyfikacja/plant_pattern.jpg);
 }
 
@@ -445,8 +445,8 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  /* background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),
-    url(../Identyfikacja/background_mobile.webp); */
+  background-image: linear-gradient(rgba(10, 10, 0, 0.7), rgba(0, 0, 0, 0.1)),
+    url(../Identyfikacja/mobilne_tlo.jpg);
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -544,7 +544,7 @@ body {
 }
 
 /**Stylowanie przycisku*/
-.newsletter input[type="submit"] {
+.newsletter input[type='submit'] {
   padding: 0;
 }
 
@@ -576,7 +576,7 @@ body {
   width: 90%;
   padding: 0.5rem;
 }
-.newsletter input[type="checkbox"] + label {
+.newsletter input[type='checkbox'] + label {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -590,14 +590,14 @@ body {
   font-size: 1rem;
 }
 
-.newsletter input[type="checkbox"] {
+.newsletter input[type='checkbox'] {
   display: none;
 }
 
-.newsletter input[type="checkbox"] + label:before {
+.newsletter input[type='checkbox'] + label:before {
   display: flex;
   background-color: #fff;
-  content: "\2714";
+  content: '\2714';
   border: 0.1rem solid var(--fifth-color);
   border-radius: 0.2rem;
   width: 1rem;
@@ -611,11 +611,11 @@ body {
   transition: 0.3s;
 }
 
-.newsletter input[type="checkbox"] + label:active:before {
+.newsletter input[type='checkbox'] + label:active:before {
   transform: scale(0);
 }
 
-.newsletter input[type="checkbox"]:checked + label:before {
+.newsletter input[type='checkbox']:checked + label:before {
   background-color: var(--fourth-color);
   color: var(--primary-color);
   border-color: var(--fifth-color);
