--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,20 @@ body {
   flex-direction: column;
 
   height: auto;
+  margin: 0 0.75rem 0.75rem 0.75rem;
+}
+
+.info__title {
+  width: 100%;
+  padding: 0.5rem;
+  margin: 0.25rem;
+  align-self: center;
+  background-color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  font-size: var(--font-size-2);
+  font-family: var(--primary-font);
+  letter-spacing: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .info--1,
@@ -240,12 +254,18 @@ body {
   flex-direction: column;
   align-items: center;
   height: auto;
-  padding: 1rem 1rem;
+  padding: 1.25rem 1rem;
+  margin: 0.25rem 0;
+  border-radius: 0.5rem;
+}
+
+.info--4 {
+  margin-bottom: 1rem;
 }
 
 .info__item p {
   text-align: center;
-  font-family: var(--primary-font);
+  font-family: var(--secondary-font);
 }
 
 .info__icon {
@@ -258,6 +278,7 @@ body {
   font-family: var(--primary-font);
   padding: 0.5rem 0;
   letter-spacing: 0.25rem;
+  font-weight: 900;
 }
 
 /* Sekcja dodatkowe informacje */
