--- a/css/tablet.css
+++ b/css/tablet.css
@@ -59,6 +59,7 @@
   .info {
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   .info--1,
@@ -75,8 +76,12 @@
 
   .info__item {
     padding: 1rem;
-    width: 50%;
-
+    width: calc(50% - 0.5rem);
+    margin: 0.25rem;
+  }
+  
+  .info--3, .info--4 {
+    margin-bottom: 0.75rem;
   }
 
   .aboutUs {
