--- a/css/screen.css
+++ b/css/screen.css
@@ -50,8 +50,10 @@
 
 /* ------- SEKCJA INFO --------*/
   .info__item {
-    width: 25%;
+    width: calc(25% - 0.5rem);
+    margin-bottom: 0.5rem;
   }
+  
   .info--1,
   .info--3 {
     background-color: var(--fourth-color);
