--- a/css/main.css
+++ b/css/main.css
@@ -673,7 +673,7 @@ body {
   bottom: 0px;
   margin: 0 auto;
   width: 100%;
-  padding: 1rem;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -689,12 +689,33 @@ body {
 .cookie > p {
   text-align: center;
 }
-
+.cookie__text {
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
 .cookie__policy {
   text-decoration: underline;
+  touch-action: manipulation;
   color: var(--primary-color);
 }
 
 .cookie__policy:hover {
   color: var(--fifth-color);
+}
+
+.cookie__close {
+  text-align: center;
+  align-self: center;
+  border-radius: 0.1rem;
+  height: 3rem;
+  width: 10rem;
+  border: solid transparent;
+  box-shadow: 1px 7px 25px -2px rgba(0, 0, 0, 0.75);
+  font-family: var(--secondary-font);
+  font-size: var(--font-size-2);
+  background-color: var(--primary-color);
+  text-transform: uppercase;
+  cursor: pointer;
+  touch-action: manipulation;
+  color: var(--third-color);
 }
