--- a/css/main.css
+++ b/css/main.css
@@ -683,6 +683,7 @@ body {
   color: var(--primary-color);
   visibility: visible;
   opacity: 1;
+  transition: visibility 0.3s ease-in, opacity 0.3s ease-in;
   font-family: var(--primary-font);
   font-size: var(--font-size-2);
 }
