--- a/css/screen.css
+++ b/css/screen.css
@@ -7,16 +7,64 @@
     padding: 16px;
   }
   /* ----- SEKCJA HERO -------- */
+
+
   .hero__background {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(../Identyfikacja/tlo_3.jpg);
+    url(../Identyfikacja/tlo_3.jpg);
   }
+
+  .slide1 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/nordwood-themes-pYWrdKO5ksI-unsplash.png);
+  }
+
+  .slide2{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/simon-peel-ui-Bh1eegzQ-unsplash.jpg);
+  }
+
+
+
+  /* Buttons prev next */
+
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 85%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    opacity: 0.7;
+    font-weight: bold;
+    font-size: 2rem;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .prev {
+    left: 1rem;
+  }
+
+  .next {
+    right: 1rem;
+    border-radius: 2px 0 0 2px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(133, 133, 133, 0.8);
+  }
+
+/*  HERO */
 
   .hero {
     display: grid;
     grid-template-columns: 65vw auto;
     grid-template-rows: 80vh auto;
-    margin: 0;
+    margin-left: 3rem;
+    margin-top: 4rem;
   }
 
 
