--- a/css/main.css
+++ b/css/main.css
@@ -224,26 +224,33 @@ body {
   display: flex;
   flex-direction: column;
   height: auto;
-  padding-bottom: 10rem;
-  padding-top: 2rem;
+  width: 100%;
+  padding: 2rem 0.5rem 10rem 0.5rem;
   /* margin: 0 0.75rem 0.75rem 0.75rem; */
   background-color: #f4f5f0;
 }
 
 .info__title {
   width: 100%;
-  padding: 4rem;
-  margin: 0.25rem;
+
+  padding: 4rem 0 4rem 0;
   align-self: center;
   /* background-color: rgba(255, 255, 255, 0.9); */
   text-align: center;
-  font-size: var(--font-size-4);
+  font-size: var(--font-size-3);
   font-family: var(--primary-font);
   letter-spacing: 0.5rem;
-  border-radius: 0.5rem;
+  /* border-radius: 0.5rem; */
+}
+.info__item {
+  background-color: var(--third-color);
+  border-radius: 0rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  box-shadow: 0px 12px 16px -5px rgba(20, 28, 8, 0.38);
 }
 
-.info--1,
+/* .info--1,
 .info--3 {
   background-color: white;
   background-color: var(--fourth-color);
@@ -255,7 +262,7 @@ body {
   background-color: white;
   background-color: var(--fifth-color);
   color: var(--sixth-color);
-}
+} */
 
 .info__item {
   display: flex;
@@ -267,11 +274,12 @@ body {
   border-radius: 0.5rem;
 }
 
-.info--4 {
+/* .info--4 {
   margin-bottom: 1rem;
-}
+} */
 
 .info__item p {
+  padding: 2rem;
   text-align: center;
   font-family: var(--secondary-font);
 }
@@ -279,6 +287,7 @@ body {
 .info__icon {
   font-size: 2rem;
   text-align: center;
+  color: var(--fourth-color);
 }
 
 .info__header {
