--- a/css/screen.css
+++ b/css/screen.css
@@ -51,7 +51,7 @@
     width: calc(25% - 0.5rem);
     margin-bottom: 0.5rem;
   }
-
+  /* 
   .info--1,
   .info--3 {
     background-color: var(--fourth-color);
@@ -62,7 +62,7 @@
   .info--4 {
     background-color: var(--fifth-color);
     color: var(--sixth-color);
-  }
+  } */
   .moreInfo__wrapper {
     width: 80%;
   }
