--- a/css/main.css
+++ b/css/main.css
@@ -218,6 +218,8 @@ body {
       rgba(251, 251, 251, 0.5)
     ),
     url(../Identyfikacja/plant_pattern.jpg);
+  width: 100%;
+  height: 100%;
 }
 
 .info {
@@ -243,7 +245,7 @@ body {
   /* border-radius: 0.5rem; */
 }
 .info__item {
-  background-color: var(--third-color);
+  background-color: #fff;
   border-radius: 0rem;
   margin-left: 2rem;
   margin-right: 2rem;
@@ -305,19 +307,19 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   overflow: hidden;
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
-  margin-top: 10rem;
+  padding-top: 5rem;
   background-color: rgba(255, 255, 255, 0.9);
 }
 .moreInfo__title {
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-3);
   font-family: var(--primary-font);
-  padding: 2rem 0;
+  padding: 1rem 0 4rem 0;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.5rem;
-  border-bottom: var(--primary-color) solid 1px;
+  /* border-bottom: var(--primary-color) solid 1px; */
   width: 90%;
   margin: 0 auto;
 }
