--- a/css/main.css
+++ b/css/main.css
@@ -244,13 +244,6 @@ body {
   letter-spacing: 0.5rem;
   /* border-radius: 0.5rem; */
 }
-.info__item {
-  background-color: #fff;
-  border-radius: 0rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  box-shadow: 0px 12px 16px -5px rgba(20, 28, 8, 0.38);
-}
 
 /* .info--1,
 .info--3 {
@@ -273,7 +266,9 @@ body {
   height: auto;
   padding: 1.25rem 1rem;
   margin: 0.25rem 0;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
+  background-color: #fff;
+  box-shadow: 0px 12px 16px -5px rgba(20, 28, 8, 0.38);
 }
 
 /* .info--4 {
@@ -309,7 +304,7 @@ body {
   overflow: hidden;
   width: 80%;
   margin: 0 auto;
-  padding-top: 5rem;
+  padding: 5rem 0.5rem 10rem 0.5rem;
   background-color: rgba(255, 255, 255, 0.9);
 }
 .moreInfo__title {
@@ -370,25 +365,33 @@ body {
   display: flex;
   flex-direction: column;
   /* margin: 0.75rem; */
-  background-color: rgba(255, 255, 255, 0.9);
+  padding: 2rem 0.5rem 10rem 0.5rem;
+  opacity: 1;
+  /* background-color: rgba(255, 255, 255, 0.9); */
   height: auto;
-  padding-bottom: 10rem;
-  padding-top: 6rem;
+  background-color: #ffffff;
+  background-image: url(/Identyfikacja/about.png);
+  background-attachment: center;
+  background-repeat: repeat;
+  background-position: center;
 }
 
 /* Ostylowanie sekcji aboutUs__title */
 
 .aboutUs__title {
   width: 100%;
-  padding: 0.5rem;
-  margin: 0.25rem;
+  padding: 4rem 0 4rem 0;
+  /* padding: 0.5rem;
+  margin: 0.25rem; */
   align-self: center;
-  background-color: rgba(255, 255, 255, 0.9);
+  /* background-color: rgba(255, 255, 255, 0.9); */
   text-align: center;
-  font-size: var(--font-size-2);
+  /* color: var(--sixth-color); */
+  font-size: var(--font-size-3);
   font-family: var(--primary-font);
   letter-spacing: 0.5rem;
   border-radius: 0.5rem;
+  color: #fff;
 }
 
 /* Ostylowanie sekcji aboutUs__content */
@@ -402,10 +405,15 @@ body {
   text-align: center;
   padding: 1.25rem 1rem;
   margin: 0.25rem 0;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
+
+  background-color: #f4f5f0;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(161,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23f4f5f0'/%3E%3Cstop offset='1' stop-color='%23ffffff'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23eeeeee' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23eeeeee' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23eeeeee' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23eeeeee' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-.content--1,
+/* .content--1,
 .content--3 {
   color: var(--primary-color);
   background-color: var(--fourth-color);
@@ -415,7 +423,7 @@ body {
 .content--4 {
   background-color: var(--fifth-color);
   color: var(--sixth-color);
-}
+} */
 
 /* Ostylowanie zdjęć */
 
@@ -481,9 +489,10 @@ body {
   font-size: 2rem;
   display: inline-block;
   transition: transform 250ms;
+  color: var(--fourth-color);
 }
 
-.social--1,
+/* .social--1,
 .social--3 {
   color: var(--primary-color);
 }
@@ -491,7 +500,7 @@ body {
 .social--2,
 .social--4 {
   color: var(--sixth-color);
-}
+} */
 
 /* Dodanie efektów wizualnych do ikon social mediów */
 
