--- a/css/screen.css
+++ b/css/screen.css
@@ -90,7 +90,7 @@
     width: calc(25% - 0.5rem);
   }
 
-  .content--1,
+  /* .content--1,
   .content--3 {
     background-color: var(--fourth-color);
     color: var(--primary-color);
@@ -100,9 +100,9 @@
   .content--4 {
     background-color: var(--fifth-color);
     color: var(--sixth-color);
-  }
+  } */
 
-  .social--1,
+  /* .social--1,
   .social--3 {
     color: var(--primary-color);
   }
@@ -110,7 +110,7 @@
   .social--2,
   .social--4 {
     color: var(--sixth-color);
-  }
+  } */
 
   .newsletter__title {
     width: 80%;
