--- a/css/main.css
+++ b/css/main.css
@@ -370,7 +370,7 @@ body {
   /* background-color: rgba(255, 255, 255, 0.9); */
   height: auto;
   background-color: #ffffff;
-  background-image: url(/Identyfikacja/about.png);
+  background-image: url(/Identyfikacja/about.jpg);
   background-attachment: center;
   background-repeat: repeat;
   background-position: center;
