--- a/css/main.css
+++ b/css/main.css
@@ -525,7 +525,8 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;
-  padding: 4rem 0rem;
+  padding: 6.5rem 0rem 6rem 0rem;
+  /* padding: 4rem 0rem; */
   font-family: var(--primary-font);
 }
 /**Stylowanie tytułu*/
