--- a/css/screen.css
+++ b/css/screen.css
@@ -57,6 +57,26 @@
     background-color: rgba(133, 133, 133, 0.8);
   }
 
+  /* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2s;
+  animation-name: fade;
+  animation-duration: 2s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .8}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .8}
+  to {opacity: 1}
+}
+
+
+
 /*  HERO */
 
   .hero {
