--- a/css/main.css
+++ b/css/main.css
@@ -182,25 +182,26 @@ body {
 /*przycisk Zapisu na premiere*/
 
 .hero__button {
-  margin-top: 1rem;
-}
-
-.btn {
-  border-radius: 2px;
-  height: 3rem;
-  width: 8rem;
-  border: solid var(--fourth-color) 1px;
-
-  font-family: var(--primary-font);
+  text-align: center;
+  align-self: center;
+  border-radius: 0.5rem;
+  height: 2.5rem;
+  width: 10rem;
+  border: solid transparent;
+  box-shadow: 1px 7px 15px -2px rgba(0, 0, 0, 0.75);
+  font-family: var(--secondary-font);
   font-size: 1rem;
-  background-color: rgba(20, 32, 9, 0.5);
+  font-weight: normal;
+  background-color: var(--primary-color);
   text-transform: uppercase;
   cursor: pointer;
   touch-action: manipulation;
+  color: var(--third-color);
 }
 
-.btn:hover {
+.hero__button:hover {
   background-color: var(--fifth-color);
+  opacity: 0.9;
   transition: 0.2s;
 }
 
