--- a/css/main.css
+++ b/css/main.css
@@ -393,6 +393,13 @@ body {
 }
 
 /* Ostylowanie zdjęć */
+.photo__wrapper{
+  display: flex;
+  align-items: center;
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+}
 
 .photo {
   width: 170px;
